Update documentation for create admin
